--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -52,13 +52,13 @@
 // Beta colours
 @beta-red:              	#DF3034;
 @beta-red-light:            lighten(@beta-red, 20%);
-@beta-red-lighter:          lighten(@beta-red, 40%);
+@beta-red-lighter:          lighten(@beta-red, 40%); 	// #fae1e1
 @beta-orange:           	#F47738;
 @beta-orange-light:         lighten(@beta-orange, 20%); // NEEDS TO BE CHECKED
 @beta-orange-lighter:       lighten(@beta-orange, 40%); // NEEDS TO BE CHECKED
 @beta-green:            	#537D2D;
-@beta-green-light:          lighten(@beta-green, 45%); // NEEDS TO BE CHECKED
-@beta-green-lighter:        lighten(@beta-green, 60%); // NEEDS TO BE CHECKED
+@beta-green-light:          lighten(@beta-green, 45%); 	// NEEDS TO BE CHECKED
+@beta-green-lighter:        lighten(@beta-green, 50%); 	// #d3e8c1
 @beta-blue-darker:          #32457E;
 @beta-blue:      			#003C64;
 @beta-blue-light:       	#A5BDDC;
@@ -68,24 +68,24 @@
 @beta-aqua:             	#81CEC6;
 @beta-aqua-light:          	lighten(@beta-aqua, 15%);
 @beta-yellow:           	#FFBF47;
-@beta-yellow-light:     	lighten(@beta-yellow, 25%);
+@beta-yellow-light:     	lighten(@beta-yellow, 25%); //#ffebc6
 
 /***************************************************************************
  * NAVIGATION COLOURS
  */
 
-@colour-nav-1: #FEF7D8;
-@colour-nav-2: #FEF9E5;
-@colour-nav-3: #FFFCF2;
-@colour-nav-4: #EDEDED;
-@colour-nav-5: #F7F7F7;
-@colour-nav-6: #FCFCFC;
-@colour-nav-7: #FFF;
+@colour-nav-1: 				#FEF7D8;
+@colour-nav-2: 				#FEF9E5;
+@colour-nav-3: 				#FFFCF2;
+@colour-nav-4: 				#EDEDED;
+@colour-nav-5: 				#F7F7F7;
+@colour-nav-6: 				#FCFCFC;
+@colour-nav-7: 				#FFF;
 
 /***************************************************************************
  * COLORS
 */
-@blue: #004B88;
+@blue: @heritage-blue;
 @blue-40: #99B7C4;
 @blue-30: #B2C9DB;
 @blue-5: #F2F6F9;
