--- a/libs/site.less
+++ b/libs/site.less
@@ -9,6 +9,7 @@
 @import "base/colors";
 @import "base/variables";
 @import "base/global";
+@import "base/tables";
 @import "base/buttons";
 @import "base/ie";
 @import "base/forms";
