--- a/libs/modules/boxes.less
+++ b/libs/modules/boxes.less
@@ -129,7 +129,7 @@
 // Box with a bar along the top
 .box {
     border-top: 8px solid @blue-40;
-    background: #fff;
+    background: @white;
     padding: 1em;
     margin-bottom: 1.5em;
 
@@ -191,7 +191,7 @@
 .box--outline {
     
     border: 2px solid @blue;
-    background: #fff;
+    background: @white;
     margin-bottom: 1.5em;
     padding: 0 1em;
     
