--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -88,7 +88,7 @@
 
     i {
         background: @blue;
-        color: #fff;
+        color: @white;
         margin: -.1em -.5em -.1em 1em;
         padding: .2em .3em;
         display: inline-block;
