"@gray-6-5" > "@gray-7", "@gray-7" > "@gray-8"

--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -10,7 +10,7 @@ table {
 
 td, 
 th {
-    border: 1px solid @gray-6-5;
+    border: 1px solid @gray-7;
     padding: @box-spacing*.4;
     text-align: left;
     vertical-align: top;
@@ -193,11 +193,11 @@ table.simple-table td {
     }
     table.contactus tr {
         margin-bottom: @box-spacing-horizontal*1.3;
-        background-color: @gray-6-5;
+        background-color: @gray-7;
         padding: @box-spacing*.6;
     }
     table.contactus tr:nth-child(even) {
-        background-color: @gray-6-5;
+        background-color: @gray-7;
     }
     table.contactus tr td, 
     table.contactus tr td:before, 
