--- a/libs/modules/extent-switcher.less
+++ b/libs/modules/extent-switcher.less
@@ -5,7 +5,7 @@
  */
 
 
-.beta-extent-switcher {
+.extent-switcher {
 	float: left;
 	border: @beta-blue-light 1px solid;
 	padding: @box-spacing*.5;
@@ -15,7 +15,7 @@
 		float: none;	
 	}
 	
-	h2.beta-extent-switcher__heading {
+	h2.extent-switcher__heading {
 		font-size:      @font-size-h5;
 		color:          @heritage-blue;
 	}
