--- a/libs/site.less
+++ b/libs/site.less
@@ -43,7 +43,7 @@
 	//@import "existing/inc/skip-nav";
 	@import "existing/inc/main-nav";
 	//@import "existing/inc/breadcrumb";
-	@import "existing/inc/section-notice";
+	//@import "existing/inc/section-notice"; // Merged with 'beta' section-notice
 	@import "existing/inc/main-content";
 	@import "existing/inc/page-info";
 	@import "existing/inc/side-nav";
@@ -51,7 +51,7 @@
 	//@import "existing/inc/side-links";
 	//@import "existing/inc/side-chat";
 	//@import "existing/inc/calls-for-evidence";
-	@import "existing/inc/extent-switcher";
+	//@import "existing/inc/extent-switcher"; // Not imported to modules as updated to 'beta' extent-switcher
 	@import "existing/inc/feed";
 	@import "existing/inc/top-news";
 	@import "existing/inc/news-list";
@@ -71,8 +71,8 @@
 	@import "existing/inc/tables";
 	//@import "existing/inc/paragraph-numbers.less";
 	@import "existing/inc/plugins";
-	@import "existing/inc/toc";
-	@import "existing/inc/letter";
+	//@import "existing/inc/toc";
+	//@import "existing/inc/letter";
 	//@import "existing/inc/accordion";
 	//@import "existing/inc/revealable";
 	//@import "existing/inc/tablesort";
@@ -154,3 +154,7 @@
 @import "modules/atoz";
 @import "modules/search-results";
 @import "modules/cookie-monster";
+
+	@import "modules/toc";
+	@import "modules/letter";
+	@import "existing/inc/section-notice";
