--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -102,6 +102,7 @@ input.main-header__search__input {
     float: left;
     margin: 0 0 0 -1px;
     width: 2em;
+    color: @white;
 }
 
 .main-header__search__submit:hover, .main-header__search__submit:focus {
