--- a/libs/site.less
+++ b/libs/site.less
@@ -67,8 +67,8 @@
 
 	@import "existing/inc/modules";
 	//@import "existing/inc/forms-old";
-	@import "existing/inc/lists";
-	@import "existing/inc/tables";
+	//@import "existing/inc/lists";
+	//@import "existing/inc/tables";
 	//@import "existing/inc/paragraph-numbers.less";
 	@import "existing/inc/plugins";
 	//@import "existing/inc/toc";
