--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -19,7 +19,7 @@
     border: 0px @callout-border solid;
     display: block;
 	h1, h2, h3 {
-		color: @callout-headings !important; 
+		color: @callout-headings; 
 		font-size: @font-size-h3;
 	}
 	a {
@@ -41,18 +41,18 @@
     	padding-top: 0;
     }
     > *:last-child {
-    	margin-bottom: 0 !important;
+    	margin-bottom: 0;
     }
 	.callout__link {
 	 	cursor: pointer;
 	 	display: block;
 	    padding: @box-spacing-vertical @box-spacing-horizontal*4.5 @box-spacing-vertical @box-spacing-horizontal;
-	    margin: @box-spacing-vertical -@box-spacing-horizontal -@box-spacing-vertical -@box-spacing-horizontal !important;
+	    margin: @box-spacing-vertical -@box-spacing-horizontal -@box-spacing-vertical -@box-spacing-horizontal;
 	    border: none;
 	    background-color: darken(spin(@callout-background, 15), 5%);
 	    color: @callout-text;
 	    border-bottom: 1px solid @callout-border;
-	    text-decoration: none !important;
+	    text-decoration: none;
 	    position: relative;
 		&:after {
 			box-sizing: border-box;
