--- a/libs/site.less
+++ b/libs/site.less
@@ -55,14 +55,14 @@
 	@import "existing/inc/feed";
 	@import "existing/inc/top-news";
 	@import "existing/inc/news-list";
-	@import "existing/inc/page-list";
+	//@import "existing/inc/page-list";
 	//@import "existing/inc/search-results";
-	@import "existing/inc/page-tree";
+	//@import "existing/inc/page-tree";
 
 	@import "existing/inc/share-bar";
 	//@import "existing/inc/index-page";
 	@import "existing/inc/home-page";
-	@import "existing/inc/login";
+	//@import "existing/inc/login";
 	//@import "existing/inc/atoz";
 
 	@import "existing/inc/modules";
@@ -154,7 +154,10 @@
 @import "modules/atoz";
 @import "modules/search-results";
 @import "modules/cookie-monster";
+@import "modules/toc";
+@import "modules/letter";
+@import "modules/section-notice";
 
-	@import "modules/toc";
-	@import "modules/letter";
-	@import "existing/inc/section-notice";
+	@import "modules/login";
+	@import "modules/page-list";
+	@import "modules/page-tree";
