main-content & main-nav
- Tidied main-nav
- Tidied main-content
- Tweaked heritage-blue-lighter slightly

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -37,8 +37,8 @@
 
 // Brand colours
 @heritage-blue:         	#004B88;
-@heritage-blue-light:       lighten(#004B88, 30%); // NEEDS TO BE CHECKED
-@heritage-blue-lighter:     lighten(#004B88, 65%); // NEEDS TO BE CHECKED
+@heritage-blue-light:       lighten(@heritage-blue, 30%);
+@heritage-blue-lighter:     lighten(@heritage-blue, 55%);
 @heritage-blue-lightest:	#f2f8ff;
 @heritage-blue-nav:			#dce5f1;
 @heritage-yellow:       	#FCBB69;
