--- a/libs/site.less
+++ b/libs/site.less
@@ -118,6 +118,8 @@
 /* Module files */
 @import "modules/header";
 @import "modules/title";
+@import "modules/main-content";
+@import "modules/main-nav";
 @import "modules/breadcrumb";
 @import "modules/cab-forms";
 @import "modules/callout";
