page-info & side-nav
- Merged and updated page-info
- Merged and updated side-nav
- Removed @casblue

--- a/libs/modules/header.less
+++ b/libs/modules/header.less
@@ -118,11 +118,11 @@ input.main-header__search__input {
      .main-header__links {
         display: table;
         width: 100%;
-        background: @blue;
+        background: @heritage-blue;
      }
      
      html[lang="en-SCT"] .main-header__links {
-         background: @casblue;
+         background: @heritage-blue;
      }
      
      .main-header__top-nav, .main-header__bottom-nav {
