--- a/libs/site.less
+++ b/libs/site.less
@@ -41,12 +41,12 @@
 	// Modules
 	//@import "existing/inc/cookie-monster";
 	//@import "existing/inc/skip-nav";
-	@import "existing/inc/main-nav";
+	//@import "existing/inc/main-nav";
 	//@import "existing/inc/breadcrumb";
 	//@import "existing/inc/section-notice"; // Merged with 'beta' section-notice
-	@import "existing/inc/main-content";
-	@import "existing/inc/page-info";
-	@import "existing/inc/side-nav";
+	//@import "existing/inc/main-content";
+	//@import "existing/inc/page-info";
+	//@import "existing/inc/side-nav";
 	//@import "existing/inc/side-tags";
 	//@import "existing/inc/side-links";
 	//@import "existing/inc/side-chat";
@@ -120,6 +120,8 @@
 @import "modules/title";
 @import "modules/main-content";
 @import "modules/main-nav";
+@import "modules/side-nav";
+@import "modules/page-info";
 @import "modules/breadcrumb";
 @import "modules/cab-forms";
 @import "modules/callout";
