--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -42,6 +42,7 @@
 @heritage-blue-lightest:	#f2f8ff;
 @heritage-blue-nav:			#dce5f1;
 @heritage-yellow:       	#FCBB69;
+@heritage-yellow-lighter:   lighten(@heritage-yellow, 20%);
 @responsible-purple:    	#57486B;
 @responsible-aqua:      	#90CE9C;
 @inventive-teal:        	#006278;
