--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -36,7 +36,7 @@
     }
     
     .breadcrumb__item a {
-        padding: 0em .5em 0 0;
+        margin: 0em .5em 0 0;
         color: @text-color;
     }
 
@@ -66,6 +66,10 @@
     
     > i {
         margin: .5em;
+    }
+
+    &:last-child a {
+        border: none;
     }
 }
 
