--- a/libs/modules/footer.less
+++ b/libs/modules/footer.less
@@ -13,6 +13,9 @@
         list-style-image: url("/static/images/arrow-bullet-fff.png");
         list-style-image: url("/static/images/arrow-bullet-fff.svg");
     }
+    a {
+        border: none;
+    }
 }
 
 .main-footer__content {
