--- a/libs/site.less
+++ b/libs/site.less
@@ -61,7 +61,7 @@
 
 	@import "existing/inc/share-bar";
 	//@import "existing/inc/index-page";
-	@import "existing/inc/home-page";
+	//@import "existing/inc/home-page";
 	//@import "existing/inc/login";
 	//@import "existing/inc/atoz";
 
