--- a/libs/modules/nav-steps.less
+++ b/libs/modules/nav-steps.less
@@ -64,9 +64,9 @@
         }
     }
     h1 ,h2 ,h3 ,h4 ,h5 ,h6 {
-        padding: @box-spacing 0 !important;
-        margin: 0 !important;
-        color: @heritage-blue !important;
+        padding: 0 0 @box-spacing 0;
+        margin: 0;
+        color: @heritage-blue;
     }
 }
 
