--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -41,6 +41,7 @@
 @heritage-blue-lighter:     lighten(@heritage-blue, 55%);
 @heritage-blue-lightest:	#f2f8ff;
 @heritage-blue-nav:			#dce5f1;
+@heritage-yellow-darker:    darken(@heritage-yellow, 10%);
 @heritage-yellow:       	#FCBB69;
 @heritage-yellow-lighter:   lighten(@heritage-yellow, 20%);
 @responsible-purple:    	#57486B;
