--- a/libs/existing/inc/plugins.less
+++ b/libs/existing/inc/plugins.less
@@ -1,3 +1,11 @@
+/**
+ * PLUGINS
+ *
+ * Slider as used on homepage of CABLINK http://www.slidesjs.com/.
+ *
+ * Also uses sidr (menu sidebar) https://github.com/artberri/sidr.
+ */
+
 /*=Plugins
 ======================================================================= */
 
