--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -1,12 +1,19 @@
 ﻿/**
  * SECTION NOTICE
  *
- * Callout for the header area of page to indicate new content e.g .
+ * Callout for the header area of page to indicate new content e.g 'https://www.citizensadvice.org.uk/benefits/universal-credit/'.
  * 
  */
 
  .section-notice__content {
     padding-top: 1em;
+    p a {
+        border-bottom: none;        
+
+        &:hover {
+                border-bottom: 0.0625rem solid @heritage-yellow-darker;        
+        }
+    }
 }
 
 .section-notice {
@@ -23,5 +30,15 @@
 @media (max-width: @max-page-width-before-the-share-bar-ruins-it-all) and (min-width: @screen-sm-min) {
     .js .section-notice__content {
         padding-right: @box-spacing-horizontal*3.5;
+    }
+}
+
+@media (max-width: @screen-sm-max ) {
+     .section-notice__content {
+        padding: @box-spacing-horizontal @box-spacing-horizontal 0 @box-spacing-horizontal;
+
+        p {
+            font-size: @font-size-small;
+        }
     }
 }
