--- a/libs/site.less
+++ b/libs/site.less
@@ -70,7 +70,7 @@
 	//@import "existing/inc/lists";
 	//@import "existing/inc/tables";
 	//@import "existing/inc/paragraph-numbers.less";
-	@import "existing/inc/plugins";
+	//@import "existing/inc/plugins"; // Slider and menu slider library, not used so not included 
 	//@import "existing/inc/toc";
 	//@import "existing/inc/letter";
 	//@import "existing/inc/accordion";
@@ -163,3 +163,4 @@
 @import "modules/login";
 @import "modules/page-list";
 @import "modules/page-tree";
+
