modules > modules/contianers
- Added beta purple, for now.

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -71,6 +71,7 @@
 @beta-aqua-light:          	lighten(@beta-aqua, 15%);
 @beta-yellow:           	#FFBF47;
 @beta-yellow-light:     	lighten(@beta-yellow, 25%); //#ffebc6
+@beta-purple:				#947ACA;
 
 /***************************************************************************
  * NAVIGATION COLOURS
