--- a/libs/base/framework.less
+++ b/libs/base/framework.less
@@ -521,3 +521,9 @@
         width: calc( ~"@{width-span-1} - 1em" );
     }
 }
+
+@media (max-width: @screen-sm-max) {
+    .layout--full-width-mobile {
+        width: 100% !important;
+    }
+}
