--- a/libs/modules/members.less
+++ b/libs/modules/members.less
@@ -206,3 +206,56 @@
         background-size: 50px;
     }
 }
+
+.member-logo, .member-title {
+    float: left;
+}
+.member-logo {
+    padding-right: 20px;
+    margin: @box-spacing 0;
+}
+.member-title {
+    display: block;
+    font-size: 1.8em;
+    color: @heritage-blue;
+    width: 70%;
+    font-weight: @font-weight-bold;
+    text-rendering: optimizelegibility;
+    margin: 35px 0 0 0;
+    padding: 0px 0;
+}
+@media screen and (max-width:525px) {
+    .member-title {
+        font-size: @font-size-medium;
+        width: 55%;
+    }
+}
+.bureau-colour {
+    margin-left: 0px;
+    display: block;
+    height: 20px;
+    width: 20px;
+    float: left;
+    margin-right: 10px;
+}
+.bureau-colour.green {
+    background: @beta-green;
+}
+.bureau-colour.blue {
+    background: @beta-blue;
+}
+.bureau-colour.orange {
+    background: @beta-orange;
+}
+.bureau-colour.purple {
+    background: @beta-purple;
+}
+.bureau-colour.yellow {
+    background: @beta-yellow;
+}
+.key-container {
+    margin-top: 10px;
+}
+.key-container .span6 {
+    margin-left: 0px!important;
+}
