--- a/libs/modules/feed.less
+++ b/libs/modules/feed.less
@@ -133,7 +133,7 @@
 .feed-tabs__nav__item {
     margin: 0;
     display: table-cell;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid @gray-6;
 
     text-align: center;
 
