--- a/libs/site.less
+++ b/libs/site.less
@@ -52,7 +52,7 @@
 	//@import "existing/inc/side-chat";
 	//@import "existing/inc/calls-for-evidence";
 	//@import "existing/inc/extent-switcher"; // Not imported to modules as updated to 'beta' extent-switcher
-	@import "existing/inc/feed";
+	//@import "existing/inc/feed";
 	@import "existing/inc/top-news";
 	@import "existing/inc/news-list";
 	//@import "existing/inc/page-list";
@@ -119,6 +119,7 @@
 @import "modules/header";
 @import "modules/title";
 @import "modules/main-content";
+@import "modules/feed";
 @import "modules/containers";
 @import "modules/main-nav";
 @import "modules/page-info";
