--- a/libs/site.less
+++ b/libs/site.less
@@ -53,8 +53,8 @@
 	//@import "existing/inc/calls-for-evidence";
 	//@import "existing/inc/extent-switcher"; // Not imported to modules as updated to 'beta' extent-switcher
 	//@import "existing/inc/feed";
-	@import "existing/inc/top-news";
-	@import "existing/inc/news-list";
+	//@import "existing/inc/top-news";
+	//@import "existing/inc/news-list";
 	//@import "existing/inc/page-list";
 	//@import "existing/inc/search-results";
 	//@import "existing/inc/page-tree";
