Extent and nav fixes

--- a/libs/modules/main-nav.less
+++ b/libs/modules/main-nav.less
@@ -40,10 +40,11 @@ html[lang="en-SCT"] .main-nav {
     position: relative;
 
     & > a {
-        padding: 15px 8px;
+        padding: 13.5px @box-spacing-horizontal/2;
         display: block;
         font-weight: @font-weight-bold;
         color: @white;
+        border: none;
 
         &:hover, &:focus {
             background: @heritage-blue-lightest;
