--- a/libs/modules/extent-switcher.less
+++ b/libs/modules/extent-switcher.less
@@ -5,19 +5,20 @@
  */
 
 
-.extent-switcher {
+.beta-extent-switcher {
 	float: left;
 	border: @beta-blue-light 1px solid;
-	padding: @box-spacing*.5;
+	padding: @box-spacing-vertical @box-spacing-horizontal;
 	
 	@media screen and (max-width: @screen-xs-max) {
 		width: 100%;
 		float: none;	
 	}
 	
-	h2.extent-switcher__heading {
-		font-size:      @font-size-h5;
-		color:          @heritage-blue;
+	h2.beta-extent-switcher__heading {
+		font-size: @font-size-h5;
+		color: @heritage-blue;
+		margin-top: 0;
 	}
 	
 	.custom-dropdown__select {
@@ -27,5 +28,6 @@
 	.custom-dropdown__button {
 		width: 17%;
 		float: right;
+		padding: .1em;
 	}
 }
