--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -122,6 +122,14 @@
 @bmis-header: 				#DDDAE1;
 @cablink-header: 			#FFE4C1;
 
+/***************************************************************************
+ * SOCIAL BRAND COLOURS
+*/
+
+@google-plus-brand-colour:  #DC4E41;
+@facebook-brand-colour:     #3B579D;
+@twitter-brand-colour:      #55ACEE;
+@whatsapp-brand-colour:     #30D74D;
 
 /***************************************************************************
  * STATE COLORS
