--- a/libs/site.less
+++ b/libs/site.less
@@ -59,7 +59,7 @@
 	//@import "existing/inc/search-results";
 	//@import "existing/inc/page-tree";
 
-	@import "existing/inc/share-bar";
+	//@import "existing/inc/share-bar";
 	//@import "existing/inc/index-page";
 	//@import "existing/inc/home-page";
 	//@import "existing/inc/login";
@@ -165,4 +165,4 @@
 @import "modules/login";
 @import "modules/page-list";
 @import "modules/page-tree";
-
+@import "modules/share-bar";
