--- a/libs/modules/side-chat.less
+++ b/libs/modules/side-chat.less
@@ -7,7 +7,7 @@
 
 .side-chat {
     background-color: @white;
-    padding: 0 @box-spacing-horizontal;
+    //padding: 0 @box-spacing-horizontal;
 
     & > .webchat h2 {
 	    font-size: @font-size-medium;
